--- a/INSTALL
+++ b/INSTALL
@@ -13,9 +13,11 @@ Discusses:
 To install procmail, lockfile and formail: edit Makefile & config.h accordingly
 and type 'make install'.
 Intended configurable options in Makefile are:
-	the install-destinations and the LOCKINGTEST directories.
+	the install-destinations and the LOCKINGTEST directories (you can
+	optionally use something like 'make BASENAME=$HOME install' instead).
 Intended configurable options in config.h are:
-	MMDF support, standard environment presettings, trusted userids.
+	MMDF support, standard environment presettings including PATH,
+	trusted userids.
 
 'make install' will:
       - implicitly do a 'make init', which will check your basic utilities for
@@ -29,6 +31,8 @@ Intended configurable options in config.h are:
 	formail.1, procmailrc.5, procmailsc.5, procmailex.5
       - copy these binaries and mailstat to $(BINDIR)
       - copy the man pages to $(MAN1DIR) and $(MAN5DIR)
+      - BEWARE: the installation obeys the current umask setting.  If you
+	want the files to be available to anyone, correct your umask first.
 
 'make deinstall' will:
       - remove the just installed files in $(BINDIR)
@@ -156,7 +160,8 @@ itself.
 
 Every user that wants to use procmail should have a .forward and a
 .procmailrc file in his HOME directory.	 For starters, you can look
-at the supplied example files in "examples".
+at the supplied example files in "examples" or the NOTES section in
+the procmail(1) man page.
 BTW, be sure to make .forward *world* readable.
 MMDF users should note that they need a .maildelivery file *instead* of the
 .forward file (see the procmail(1) man page for more information).
